--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,20 @@ h5 {
   font-size: 30px;
 }
 
+.grid-show {
+  margin: 150px 210px 0px 210px;
+  padding: 5px;
+}
+
 p {
   font-family: 'Abel', sans-serif;
   font-size: 17px;
 
   /* font-family: 'Assistant', sans-serif; */
+}
+
+#grid-row {
+  margin: 5px;
 }
 
 h1 {
