--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ h5 {
 }
 
 .grid-show {
-  margin: 150px 210px 0px 210px;
+  margin: 90px 210px 0px 210px;
   padding: 5px;
 }
 
@@ -23,8 +23,12 @@ p {
   /* font-family: 'Assistant', sans-serif; */
 }
 
+#welcome {
+  margin: 20px;
+}
+
 #grid-row {
-  margin: 5px;
+  margin: 7px;
 }
 
 h1 {
